# opkg

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  cgitrc  config.h.in  configure.ac  libopkg.pc.in
docker/: Dockerfile  run-docker.sh
docs/: CONTRIBUTING.md  MAINTAINING.md  ROADMAP.md  SECURITY.md
libopkg/: CMakeLists.txt  file_util.c  opkg_archive.c  opkg_cmd.c  opkg_conf.c  opkg_conf.h  opkg_download_curl.c  opkg_message.c  opkg_message.h  opkg_verify.c  parse_util.c  pkg.c  pkg.h  pkg_dest.c  pkg_dest.h  pkg_hash.c  release.c  release_parse.c
man/: CMakeLists.txt  opkg.conf.5.in
scripts/: make-dist.sh
src/: CMakeLists.txt  opkg.c
tests/: Makefile  cfg.py
tests/misc/: print_architecture.py
utils/: CMakeLists.txt
